[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/TurretController.gd" type="Script" id=1]
[ext_resource path="res://audio/Laser.wav" type="AudioStream" id=2]
[ext_resource path="res://audio/Laser2.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/Laser3.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/Explosion.wav" type="AudioStream" id=5]
[ext_resource path="res://audio/Explosion2.wav" type="AudioStream" id=6]
[ext_resource path="res://audio/Explosion3.wav" type="AudioStream" id=7]
[ext_resource path="res://meshes/building_base_model/BuildingBase.mesh" type="ArrayMesh" id=8]
[ext_resource path="res://meshes/building_base_model/TurretBase.mesh" type="ArrayMesh" id=9]
[ext_resource path="res://meshes/building_base_model/Drum.mesh" type="ArrayMesh" id=10]

[sub_resource type="ConcavePolygonShape" id=1]

data = PoolVector3Array( 0, 0.45, -2, 0, -0.1499, -2, 0.7651, -0.1499, -1.8477, 0.7651, 0.45, -1.8477, 0.7651, -0.1499, -1.8477, 1.4141, -0.1499, -1.4141, 1.4141, 0.45, -1.4141, 1.4141, -0.1499, -1.4141, 1.8477, -0.1499, -0.7651, 1.8477, 0.45, -0.7651, 1.8477, -0.1499, -0.7651, 2, -0.1499, 0, 2, 0.45, 0, 2, -0.1499, 0, 1.8477, -0.1499, 0.7651, 1.8477, 0.45, 0.7651, 1.8477, -0.1499, 0.7651, 1.4141, -0.1499, 1.4141, 1.4141, 0.45, 1.4141, 1.4141, -0.1499, 1.4141, 0.7651, -0.1499, 1.8477, 0.7651, 0.45, 1.8477, 0.7651, -0.1499, 1.8477, 0, -0.1499, 2, 0, 0.45, 2, 0, -0.1499, 2, -0.7651, -0.1499, 1.8477, -0.7651, 0.45, 1.8477, -0.7651, -0.1499, 1.8477, -1.4141, -0.1499, 1.4141, -1.4141, 0.45, 1.4141, -1.4141, -0.1499, 1.4141, -1.8477, -0.1499, 0.7651, -1.8477, 0.45, 0.7651, -1.8477, -0.1499, 0.7651, -2, -0.1499, 0, -2, 0.45, 0, -2, -0.1499, 0, -1.8477, -0.1499, -0.7651, -1.8477, 0.45, -0.7651, -1.8477, -0.1499, -0.7651, -1.4141, -0.1499, -1.4141, -1.4141, 0.45, -1.4141, -1.4141, -0.1499, -1.4141, -0.7651, -0.1499, -1.8477, -0.7651, 0.45, -1.8477, -0.7651, -0.1499, -1.8477, 0, -0.1499, -2, 1.4141, 0.45, 1.4141, 0.7651, 0.45, 1.8477, 0, 0.45, 2, 1.8477, 0.45, 0.7651, 1.4141, 0.45, 1.4141, -0.7651, 0.45, 1.8477, -1.8477, 0.45, 0.7651, 2, 0.45, 0, 1.8477, 0.45, 0.7651, -2, 0.45, 0, 1.8477, 0.45, -0.7651, 2, 0.45, 0, -1.8477, 0.45, -0.7651, 1.4141, 0.45, -1.4141, 1.8477, 0.45, -0.7651, 0.7651, 0.45, -1.8477, 1.4141, 0.45, -1.4141, -1.8477, 0.45, -0.7651, 0, 0.45, -2, 0.7651, 0.45, -1.8477, -1.4141, 0.45, -1.4141, 0, 0.45, -2, 0.7651, -0.1499, -1.8477, 0.7651, 0.45, -1.8477, 0.7651, 0.45, -1.8477, 1.4141, -0.1499, -1.4141, 1.4141, 0.45, -1.4141, 1.4141, 0.45, -1.4141, 1.8477, -0.1499, -0.7651, 1.8477, 0.45, -0.7651, 1.8477, 0.45, -0.7651, 2, -0.1499, 0, 2, 0.45, 0, 2, 0.45, 0, 1.8477, -0.1499, 0.7651, 1.8477, 0.45, 0.7651, 1.8477, 0.45, 0.7651, 1.4141, -0.1499, 1.4141, 1.4141, 0.45, 1.4141, 1.4141, 0.45, 1.4141, 0.7651, -0.1499, 1.8477, 0.7651, 0.45, 1.8477, 0.7651, 0.45, 1.8477, 0, -0.1499, 2, 0, 0.45, 2, 0, 0.45, 2, -0.7651, -0.1499, 1.8477, -0.7651, 0.45, 1.8477, -0.7651, 0.45, 1.8477, -1.4141, -0.1499, 1.4141, -1.4141, 0.45, 1.4141, -1.4141, 0.45, 1.4141, -1.8477, -0.1499, 0.7651, -1.8477, 0.45, 0.7651, -1.8477, 0.45, 0.7651, -2, -0.1499, 0, -2, 0.45, 0, -2, 0.45, 0, -1.8477, -0.1499, -0.7651, -1.8477, 0.45, -0.7651, -1.8477, 0.45, -0.7651, -1.4141, -0.1499, -1.4141, -1.4141, 0.45, -1.4141, -1.4141, 0.45, -1.4141, -0.7651, -0.1499, -1.8477, -0.7651, 0.45, -1.8477, -0.7651, 0.45, -1.8477, 0, -0.1499, -2, 0, 0.45, -2, 1.4141, 0.45, 1.4141, 0, 0.45, 2, -0.7651, 0.45, 1.8477, 1.8477, 0.45, 0.7651, -0.7651, 0.45, 1.8477, -1.4141, 0.45, 1.4141, -1.8477, 0.45, 0.7651, 1.8477, 0.45, 0.7651, -1.4141, 0.45, 1.4141, -2, 0.45, 0, 2, 0.45, 0, -1.8477, 0.45, 0.7651, -1.8477, 0.45, -0.7651, 1.8477, 0.45, -0.7651, -2, 0.45, 0, 0.7651, 0.45, -1.8477, -1.8477, 0.45, -0.7651, -1.4141, 0.45, -1.4141, 0, 0.45, -2, -1.4141, 0.45, -1.4141, -0.7651, 0.45, -1.8477 )

[sub_resource type="CapsuleShape" id=2]

radius = 1.64
height = 1.0

[node name="BuildingBase" type="Spatial" groups=[
"turrets",
"human_objects",
]]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
laserSound1 = ExtResource( 2 )
laserSound2 = ExtResource( 3 )
laserSound3 = ExtResource( 4 )
explosion_sound_1 = ExtResource( 5 )
explosion_sound_2 = ExtResource( 6 )
explosion_sound_3 = ExtResource( 7 )

[node name="BuildingBase" type="MeshInstance" parent="." index="0"]

editor/display_folded = true
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = ExtResource( 8 )
skeleton = NodePath("..")
material/0 = null
_sections_unfolded = [ "Transform" ]

[node name="StaticBody" type="StaticBody" parent="BuildingBase" index="0"]

input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="BuildingBase/StaticBody" index="0"]

shape = SubResource( 1 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="TurretBase" type="Spatial" parent="." index="1"]

editor/display_folded = true
_sections_unfolded = [ "Transform" ]

[node name="TurretBaseModel" type="MeshInstance" parent="TurretBase" index="0"]

transform = Transform( -0.17713, 0, 0.984188, 0, 1, 0, -0.984188, 0, -0.17713, 0, 0.5, 0 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = ExtResource( 9 )
skeleton = NodePath("..")
material/0 = null
_sections_unfolded = [ "Transform" ]

[node name="Drum" type="MeshInstance" parent="TurretBase/TurretBaseModel" index="0"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.13622, 0 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = ExtResource( 10 )
skeleton = NodePath("..")
material/0 = null
_sections_unfolded = [ "Transform" ]

[node name="LaserAudio" type="AudioStreamPlayer3D" parent="TurretBase/TurretBaseModel/Drum" index="0"]

stream = ExtResource( 2 )
attenuation_model = 0
unit_db = -6.0
unit_size = 5.0
max_db = 3.0
autoplay = false
max_distance = 0.0
out_of_range_mode = 0
bus = "SFX"
area_mask = 1
emission_angle_enabled = false
emission_angle_degrees = 45.0
emission_angle_filter_attenuation_db = -12.0
attenuation_filter_cutoff_hz = 5000.0
attenuation_filter_db = -24.0
doppler_tracking = 0

[node name="LaserAperture" type="Spatial" parent="TurretBase/TurretBaseModel/Drum" index="1"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.31772, 0.294933, 0.165635 )

[node name="StaticBody" type="StaticBody" parent="TurretBase/TurretBaseModel" index="1"]

transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.674528, 0 )
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape" type="CollisionShape" parent="TurretBase/TurretBaseModel/StaticBody" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0785902, 0, 0 )
shape = SubResource( 2 )
disabled = false

[node name="Laser" type="ImmediateGeometry" parent="." index="2"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
_sections_unfolded = [ "Transform" ]


